# claims-agent

./: .dockerignore  .env.example  .gitignore  Architecture.md  Build Plan & Timeline.md  Dockerfile  LICENSE  Outreach Agent.md  Pitch.md  README.md  State Machine & Data.md  pyproject.toml  render.yaml
app/: main.py
app/agent/: enrich.py  extract.py  risk.py  route.py
app/config/: __init__.py  outcomes.yaml
app/domain/: claim.py  state_machine.py
app/generators/: evri_csv.py
app/integrations/: aftership.py  attio.py  dispatch_mock.py
claims-form/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json
claims-form/src/: App.tsx  ClaimForm.tsx  main.tsx  styles.css  submitClaim.ts  types.ts  validation.ts
contract/: verdict.schema.json
data/samples/: claim_email.json  customer_intake.csv  outcomes.json
docs/: 00 Home.md  Architecture.md  Attio Schema Design.md  Build Log - Live State.md  Evri File Formats.md  Feasibility.md  Hackathon Rules Compliance.md  Idea - Autonomous Claims Operator.md  Integrations Reference.md  Partner Tech.md  Team & Roles.md  Technical Spec.md
n8n/: claims-loop.json  outcome-replay.json
tests/: sample_claims.py  test_evri_csv_snapshot.py  test_outcomes.py  test_state_machine.py
tests/fixtures/: evri_golden.csv
tools/: attio_provision.py  build_fixture.py
