[project]
name = "claims-agent"
version = "0.1.0"
description = "Autonomous courier-claims operator — Tech:Europe London hackathon"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.8",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "ruff>=0.6"]
agents = [
    "google-genai>=0.3",
    "tavily-python>=0.5",
    "minima-cli>=0.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "tests", "tools"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
